# QuickREST2

./: .gitignore  Cargo.toml  LICENSE  README.md  build-cli.sh  build-ui.sh  build-windows.sh  codecov.sh  diff-files.sh  watch-app.sh  watch-check.sh  watch.sh
crates/qr_cli/: Cargo.toml
crates/qr_explore/: Cargo.toml
crates/qr_explore/src/: amos.rs  amos_buckets.rs  amos_generation.rs  amos_relations.rs  amos_result.rs  behaviours.rs  exploration_settings.rs  explore.rs  http_translation.rs  lib.rs  meta_properties.rs  sequence.rs  synthesize.rs
crates/qr_explore/test/resources/: rest-ncs.json  rest-news.json
crates/qr_http_resource/: Cargo.toml
crates/qr_http_resource/src/: http.rs  lib.rs  reqwest_http.rs
crates/qr_objective_manager/: Cargo.toml
crates/qr_objective_manager/src/: manager.rs
crates/qr_open_api/: Cargo.toml
crates/qr_open_api/src/: error.rs  lib.rs  open_api.rs
crates/qr_report/: Cargo.toml
crates/qr_report/src/: error.rs  lib.rs  report.rs
crates/qr_specification_manager/: Cargo.toml
crates/qr_specification_manager/src/: error.rs  lib.rs  manager.rs
crates/qr_specification_resource_access/: Cargo.toml
crates/qr_specification_resource_access/src/: error.rs  lib.rs  specification.rs
crates/qr_viewer/: Cargo.toml
crates/qr_viewer/src/: app.rs  app_state.rs  central_navigation.rs  command_sender.rs  context.rs  fuzzing.rs  lib.rs  main_navigation.rs  sequencer.rs
crates/qr_viewer/src/ui/: bottom_panel.rs  mod.rs  navigation_panels.rs  top_panel.rs
