[package]
name = "qr_explore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
qr_open_api.workspace = true
qr_http_resource.workspace = true

# External
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
reqwest.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

petgraph.workspace = true
regex.workspace = true

[dev-dependencies]
qr_specification_resource_access.workspace = true
