[package]
name = "qr_specification_resource_access"
version.workspace = true
edition.workspace = true

[dependencies]
# internal
qr_http_resource.workspace = true

# external
serde.workspace = true
serde_json.workspace = true

reqwest.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
